llm-servers/ollama/standalone/ollama-statefulset-deployment/01-ollama-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ollama
  labels:
    app: ollama
    app.kubernetes.io/part-of: ollama
spec:
  serviceName: ollama
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
      - name: ollama-container
        image: ollama/ollama:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: api
          containerPort: 11434
          protocol: TCP
        resources:
          limits:
            cpu: '5'
            memory: 12Gi
            # nvidia.com/gpu: '1'
          requests:
            cpu: '4'
            memory: 10Gi
            # nvidia.com/gpu: '1'
        livenessProbe:
          httpGet:
            path: /
            port: api
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 100
          timeoutSeconds: 8
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: api
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "/bin/ollama pull $MODEL_ID"]
        volumeMounts:
        - name: ollama-volume
          mountPath: /.ollama
      restartPolicy: Always
      # tolerations:
      #   - key: nvidia.com/gpu.product
      #     operator: Equal
      #     value: Tesla-V100-PCIE-32GB
      #     effect: NoSchedule
      # nodeSelector:
      #   nvidia.com/gpu.product: Tesla-V100-PCIE-32GB
  volumeClaimTemplates:
  - metadata:
      name: ollama-volume
      labels:
        app: ollama
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 50Gi  # Adjust the size according to your needs
