llm-servers/ollama/standalone/ollama-statefulset-deployment/05-open-webui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui-deployment
  labels:
    app: ollama
    app.kubernetes.io/part-of: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      volumes:
      - name: open-webui-volume
        persistentVolumeClaim:
          claimName: open-webui-pvc
      containers:
      - name: open-webui
        image: ghcr.io/open-webui/open-webui:main
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1000m"
            memory: "1Gi"
          requests:
            cpu: "500m"
            memory: "500Mi"
        volumeMounts:
        - name: open-webui-volume
          mountPath: /app/backend/data
      restartPolicy: Always
  strategy:
    type: Recreate
