llm-servers/ollama/standalone/ollama-statefulset-deployment/06-open-webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui-service
  labels:
    app: ollama
spec:
  type: ClusterIP
  selector:
    app: open-webui
  ports:
  - name: api
    protocol: TCP
    port: 8080
    targetPort: 8080
