llm-servers/ollama/standalone/ollama-statefulset-deployment/03-ollama-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ollama-route
  labels:
    app: ollama
spec:
  to:
    kind: Service
    name: ollama-service
    weight: 100
  port:
    targetPort: api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
